@@ -113,11 +113,11 @@ const char* bad_exception::what() const _STLP_NOTHROW { return "class bad_except
 #if defined (_STLP_OWN_STDEXCEPT)
 __Named_exception::__Named_exception(const string& __str) {
 #if !defined (_STLP_USE_SAFE_STRING_FUNCTIONS)
-  strncpy(_M_name, __str.data(), _S_bufsize);
-#else
-  strncpy_s(_STLP_ARRAY_AND_SIZE(_M_name), __str.data(), __str.size());
-#endif
+  strncpy(_M_name, __str.c_str(), _S_bufsize);
   _M_name[_S_bufsize - 1] = '\0';
+#else
+  strncpy_s(_STLP_ARRAY_AND_SIZE(_M_name), __str.c_str(), _TRUNCATE);
+#endif
 }
 
 const char* __Named_exception::what() const _STLP_NOTHROW_INHERENTLY { return _M_name; }
