@@ -76,10 +76,10 @@ public:
   {
 #      if !defined (_STLP_USE_SAFE_STRING_FUNCTIONS)
     strncpy(_M_name, _STLP_PRIV __get_c_string(__str), _S_bufsize);
-#      else
-    strncpy_s(_STLP_ARRAY_AND_SIZE(_M_name), _STLP_PRIV __get_c_string(__str), _S_bufsize);
-#      endif
     _M_name[_S_bufsize - 1] = '\0';
+#      else
+    strncpy_s(_STLP_ARRAY_AND_SIZE(_M_name), _STLP_PRIV __get_c_string(__str), _TRUNCATE);
+#      endif
   }
   const char* what() const _STLP_NOTHROW_INHERENTLY { return _M_name; }
 #    endif
