@@ -1,3 +1,12 @@
+2007-03-06  Francois Dumont  <dums@stlport...>
+
+	* src/dll_main.cpp, stlport/stl/_stdexcept_base.h: Change strncpy_s
+	invocation to pass _TRUNCATE parameter rather than number of chars
+	to put in destination string. Default strncpy_s behavior is not to
+	truncate string if necessary but to report the issue throught a handler
+	which lead to an application crash if no handler has been set. Thanks
+	Bronek Kozicki bug report 1674974.
+
 2007-03-01  Francois Dumont  <dums@stlport...>
 
 	* test/unit/bitset_test.cpp: Add test for the to_string member
